--- a/registration-form.html
+++ b/registration-form.html
@@ -10,6 +10,34 @@
     <title>Registration Form</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <h3>Registration Form</h3>
+        </div>
+        <div class="content" id="content-1">
+            <fieldset>
+                <legend>Personal Information</legend>
+                <div class="personal">
+                    <div class="fname">
+                    <label for="fname">First Name: </label>
+                    <input type="text" id="fname">
+                </div>
+                    <div class="mname">
+                    <label for="mname">Middle Name: </label>
+                    <input type="text" id="fname">
+                    <code>&nbsp; (optional)</code>
+                    </div>
+                    <div class="lname">
+                        <label for="lname">Last Name: </label>
+                        <input type="text" id="lname">
+                    </div>
+                </div>
+            </fieldset>
+        </div>
+        <div class="content" id="content-2"></div>
+        <div class="content" id="content-3"></div>
+        <div class="content" id="content-4"></div>
+        <div class="content" id="content-5"></div>
+    </div>
 </body>
 </html>
