--- a/registration-form.html
+++ b/registration-form.html
@@ -20,24 +20,167 @@
                 <div class="personal">
                     <div class="fname">
                     <label for="fname">First Name: </label>
-                    <input type="text" id="fname">
-                </div>
+                    <input type="text" id="fname" name="fname" placeholder="First Name">
+                    </div>
+
                     <div class="mname">
                     <label for="mname">Middle Name: </label>
-                    <input type="text" id="fname">
+                    <input type="text" id="fname" name="mname" placeholder="Middle Name">
                     <code>&nbsp; (optional)</code>
                     </div>
+
                     <div class="lname">
-                        <label for="lname">Last Name: </label>
-                        <input type="text" id="lname">
+                    <label for="lname">Last Name: </label>
+                    <input type="text" id="lname" name="lname" placeholder="Last Name">
                     </div>
+
+                    <div class="bdate">
+                    <label for="bdate">Birthdate: </label>
+                    <input type="date" id="bdate" name="bdate">
+                    </div>
+
+                    <div class="age">
+                    <label for="age">Age: </label>
+                    <input type="number" id="age" min="1" max="100" value="1" name="age">
+                    </div>
+
+                    <div class="address">
+                    <label for="address">Address: </label>
+                    <input type="text" id="address" name="address" placeholder="Address">
+                    </div>
+
+                    <div class="gender">
+                        <label for="gender">Gender: </label>
+                        Male <input type="radio" id="gender" name="gender" value="male" checked>
+                        Female <input type="radio" id="gender" name="gender" value="female">
+                    </div>
+
+                    <div class="civil-status">
+                        <label for="civil-status">Civil Status: </label>
+                        <select name="civil-status" id="civil-status">
+                            <option value="single">Single</option>
+                            <option value="married">Married</option>
+                            <option value="widowed">Widowed</option>
+                        </select>
+                    </div>
+
                 </div>
             </fieldset>
         </div>
-        <div class="content" id="content-2"></div>
-        <div class="content" id="content-3"></div>
-        <div class="content" id="content-4"></div>
-        <div class="content" id="content-5"></div>
+
+        <div class="content" id="content-2">
+            <fieldset>
+                <legend>Family Member</legend>
+                <div class="family">
+                    <div class="father">
+                    <label for="father">Name of Father: </label>
+                    <input type="text" id="father" name="father" placeholder="Father's Name">
+                    </div>
+
+                    <div class="mother">
+                    <label for="mother">Name of Mother: </label>
+                    <input type="text" id="mother" name="mother" placeholder="Mother's Name">
+                    </div>
+
+                    <div class="siblings">
+                        <label for="siblings">Number of Siblings: </label>
+                        <input type="number" min="1" max="100" value="1">
+                    </div> 
+
+                </div>
+            </fieldset>
+        </div>
+
+        <div class="content" id="content-3">
+            <fieldset>
+                <legend>Educational Background</legend>
+                <div class="education">
+                    <div class="highschool">
+                        <label for="highschool">Highschool: </label>
+                        <input type="text" id="highschool" name="highschool" placeholder="Highschool">
+                    </div>
+
+                    <div class="year-graduated">
+                        <label for="year-grad">Year Graduated: </label>
+                        <input type="number" name="number" id="number" min="1900" max="2024" value="1900">
+                    </div>
+
+                    <div class="college">
+                        <label for="college">College: </label>
+                        <input type="text" name="college" id="college" placeholder="College">
+                        <code>&nbsp; (optional)</code>
+                    </div>
+
+                    <div class="course">
+                        <label for="course">Course: </label>
+                        <input type="text" name="course" id="course" placeholder="Course">
+                    </div>
+
+                    <div class="year-graduated">
+                        <label for="year-grad">Year Graduated: </label>
+                        <input type="number" name="number" id="number" min="1900" max="2024" value="1900">
+                    </div>
+
+                </div>
+            </fieldset>
+        </div>
+
+        <div class="content" id="content-4">
+            <fieldset>
+                <legend>Employment Details</legend>
+                <div class="employment">
+                    <div class="occupation">
+                        <label for="occupation">Occupation: </label>
+                        <input type="text" id="occupation" name="occupation" placeholder="Occupation">
+                    </div>
+
+                    <div class="company">
+                        <label for="company">Name of Company: </label>
+                        <input type="text" id="company" name="company" placeholder="Company">
+                    </div>
+
+                    <div class="year-worked">
+                        <label for="year-worked">Year/s of Working: </label>
+                        <select name="year-worked" id="year-worked">
+                            <option value="0-1">0-1 year</option>
+                            <option value="2-5">2-5 years</option>
+                            <option value="6-10">6-10 years</option>
+                            <option value="+10">more than 10 years</option>
+                        </select>
+                    </div>
+
+                </div>
+            </fieldset>
+        </div>
+
+        <div class="content" id="content-5">
+            <fieldset>
+                <legend>Hobbies</legend>
+                <div class="hobbies">
+                    <div class="checked">
+                    <label for="hobbies">Choose a hobby/ies: </label><br /><br />
+                    Reading <input type="checkbox" name="hobbies" id="hobbies" value="reading">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+                    Writing <input type="checkbox" name="hobbies" id="hobbies" value="writing"><br />
+                    Biking <input type="checkbox" name="hobbies" id="hobbies" value="biking">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                    Traveling <input type="checkbox" name="hobbies" id="hobbies" value="traveling"><br />
+                    Programming <input type="checkbox" name="hobbies" id="hobbies" value="programming">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+                    Writing <input type="checkbox" name="hobbies" id="hobbies" value="writing"><br />
+                    </div>
+
+                    <div class="others">
+                        <label for="others">Specify Other Hobbies: </label>
+                        <input type="text" name="others" id="others" placeholder="Other Hobbies">
+                    </div>
+
+                </div>
+            </fieldset>
+        </div> 
+        
+                <div class="buttons">
+                    <input type="submit" name="submit" value="Submit Details">
+                    <input type="reset" name="reset" value="Reset Registration">
+                </div>
+
     </div>
 </body>
 </html>
