--- a/registration-form.html
+++ b/registration-form.html
@@ -7,8 +7,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+
     <title>Registration Form</title>
 </head>
+
 <body>
     <div class="container">
         <div class="header">
@@ -175,7 +182,7 @@
                 </div>
             </fieldset>
         </div> 
-        
+
                 <div class="buttons">
                     <input type="submit" name="submit" value="Submit Details">
                     <input type="reset" name="reset" value="Reset Registration">
