Update css file

--- a/registration-form.html
+++ b/registration-form.html
@@ -19,127 +19,109 @@
         </div>
             <fieldset>
                 <legend>Personal Information</legend>
-                    <div class="fname">
+                    <div class="content">
                     <label for="fname">First Name: </label>
                     <input type="text" id="fname" name="fname" placeholder="First Name">
-                    </div>
+                    <br />
 
-                    <div class="mname">
                     <label for="mname">Middle Name: </label>
                     <input type="text" id="fname" name="mname" placeholder="Middle Name">
-                    <code>&nbsp; (optional)</code>
-                    </div>
+                    <br />
 
-                    <div class="lname">
                     <label for="lname">Last Name: </label>
                     <input type="text" id="lname" name="lname" placeholder="Last Name">
-                    </div>
+                    <br />
 
-                    <div class="bdate">
                     <label for="bdate">Birthdate: </label>
                     <input type="date" id="bdate" name="bdate">
-                    </div>
+                    <br />
 
-                    <div class="age">
                     <label for="age">Age: </label>
                     <input type="number" id="age" min="1" max="100" value="1" name="age">
-                    </div>
+                    <br />
 
-                    <div class="address">
                     <label for="address">Address: </label>
                     <input type="text" id="address" name="address" placeholder="Address">
-                    </div>
+                    <br />
 
-                    <div class="gender">
-                        <label for="gender">Gender: </label>
-                        Male <input type="radio" id="gender" name="gender" value="male" checked>
-                        Female <input type="radio" id="gender" name="gender" value="female">
-                    </div>
+                    <label for="gender">Gender: </label>
+                    Male <input type="radio" id="gender" name="gender" value="male" checked>
+                    Female <input type="radio" id="gender" name="gender" value="female">
+                    <br />
 
-                    <div class="civil-status">
-                        <label for="civil-status">Civil Status: </label>
-                        <select name="civil-status" id="civil-status">
-                            <option value="single">Single</option>
-                            <option value="married">Married</option>
-                            <option value="widowed">Widowed</option>
+                    <label for="civil-status">Civil Status: </label>
+                    <select name="civil-status" id="civil-status">
+                        <option value="single">Single</option>
+                        <option value="married">Married</option>
+                        <option value="widowed">Widowed</option>
                         </select>
                     </div>
             </fieldset>
 
             <fieldset>
                 <legend>Family Member</legend>
-                    <div class="father">
+                    <div class="content">
                     <label for="father">Name of Father: </label>
                     <input type="text" id="father" name="father" placeholder="Father's Name">
-                    </div>
+                    <br />
 
-                    <div class="mother">
                     <label for="mother">Name of Mother: </label>
                     <input type="text" id="mother" name="mother" placeholder="Mother's Name">
-                    </div>
+                    <br />
 
-                    <div class="siblings">
-                        <label for="siblings">Number of Siblings: </label>
-                        <input type="number" min="1" max="100" value="1">
+                    <label for="siblings">Number of Siblings: </label>
+                    <input type="number" min="1" max="100" value="1">
                     </div> 
             </fieldset>
 
             <fieldset>
                 <legend>Educational Background</legend>
-                <div class="education">
-                    <div class="highschool">
-                        <label for="highschool">Highschool: </label>
-                        <input type="text" id="highschool" name="highschool" placeholder="Highschool">
-                    </div>
+                    <div class="content">
+                    <label for="highschool">Highschool: </label>
+                    <input type="text" id="highschool" name="highschool" placeholder="Highschool">
+                    <br />
 
-                    <div class="year-graduated">
-                        <label for="year-grad">Year Graduated: </label>
-                        <input type="number" name="number" id="number" min="1900" max="2024" value="1900">
-                    </div>
+                    <label for="year-grad">Year Graduated: </label>
+                    <input type="number" name="number" id="number" min="1900" max="2024" value="1900">
+                    <br />
 
-                    <div class="college">
-                        <label for="college">College: </label>
-                        <input type="text" name="college" id="college" placeholder="College">
-                        <code>&nbsp; (optional)</code>
-                    </div>
+                    <label for="college">College: </label>
+                    <input type="text" name="college" id="college" placeholder="College">
+                    <br />
 
-                    <div class="course">
-                        <label for="course">Course: </label>
-                        <input type="text" name="course" id="course" placeholder="Course">
-                    </div>
+                    <label for="course">Course: </label>
+                    <input type="text" name="course" id="course" placeholder="Course">
+                    <br />
 
-                    <div class="year-graduated">
-                        <label for="year-grad">Year Graduated: </label>
-                        <input type="number" name="number" id="number" min="1900" max="2024" value="1900">
+                    <label for="year-grad">Year Graduated: </label>
+                    <input type="number" name="number" id="number" min="1900" max="2024" value="1900">
                     </div>
             </fieldset>
 
             <fieldset>
                 <legend>Employment Details</legend>
-                    <div class="occupation">
-                        <label for="occupation">Occupation: </label>
-                        <input type="text" id="occupation" name="occupation" placeholder="Occupation">
-                    </div>
+                    <div class="content">
+                    <label for="occupation">Occupation: </label>
+                    <input type="text" id="occupation" name="occupation" placeholder="Occupation">
+                    <br />
 
-                    <div class="company">
-                        <label for="company">Name of Company: </label>
-                        <input type="text" id="company" name="company" placeholder="Company">
-                    </div>
+                    <label for="company">Name of Company: </label>
+                    <input type="text" id="company" name="company" placeholder="Company">
+                    <br />
 
-                    <div class="year-worked">
-                        <label for="year-worked">Year/s of Working: </label>
-                        <select name="year-worked" id="year-worked">
-                            <option value="0-1">0-1 year</option>
-                            <option value="2-5">2-5 years</option>
-                            <option value="6-10">6-10 years</option>
-                            <option value="+10">more than 10 years</option>
-                        </select>
+                    <label for="year-worked">Year/s of Working: </label>
+                    <select name="year-worked" id="year-worked">
+                        <option value="0-1">0-1 year</option>
+                        <option value="2-5">2-5 years</option>
+                        <option value="6-10">6-10 years</option>
+                        <option value="+10">more than 10 years</option>
+                    </select>
                     </div>
             </fieldset>
 
             <fieldset class="last">
                 <legend>Hobbies</legend>
-                    <div class="hobbies">
+                    <div class="content">
                     <label for="hobbies">Choose a hobby/ies: </label><br /><br />
                     Reading <input type="checkbox" name="hobbies" id="hobbies" value="reading">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
                     Writing <input type="checkbox" name="hobbies" id="hobbies" value="writing"><br />
@@ -147,11 +129,10 @@
                     Traveling <input type="checkbox" name="hobbies" id="hobbies" value="traveling"><br />
                     Programming <input type="checkbox" name="hobbies" id="hobbies" value="programming">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
                     Writing <input type="checkbox" name="hobbies" id="hobbies" value="writing"><br />
-                    </div>
-
-                    <div class="others">
-                        <label for="others">Specify Other Hobbies: </label>
-                        <input type="text" name="others" id="others" placeholder="Other Hobbies">
+                    <br />
+                    
+                    <label for="others">Specify Other Hobbies: </label>
+                    <input type="text" name="others" id="others" placeholder="Other Hobbies">
                     </div>
             </fieldset> 
 
