update css file

--- a/registration-form.html
+++ b/registration-form.html
@@ -23,32 +23,46 @@
                     <label for="fname">First Name: </label>
                     <input type="text" id="fname" name="fname" placeholder="First Name">
                     <br />
+                    </div>
 
+                    <div class="content">
                     <label for="mname">Middle Name: </label>
                     <input type="text" id="fname" name="mname" placeholder="Middle Name">
                     <br />
+                    </div>
 
+                    <div class="content">
                     <label for="lname">Last Name: </label>
                     <input type="text" id="lname" name="lname" placeholder="Last Name">
                     <br />
+                    </div>
 
+                    <div class="content">
                     <label for="bdate">Birthdate: </label>
                     <input type="date" id="bdate" name="bdate">
                     <br />
+                    </div>
 
+                    <div class="content">
                     <label for="age">Age: </label>
                     <input type="number" id="age" min="1" max="100" value="1" name="age">
                     <br />
+                    </div>    
 
+                    <div class="content">
                     <label for="address">Address: </label>
                     <input type="text" id="address" name="address" placeholder="Address">
                     <br />
+                    </div>
 
+                    <div class="content">
                     <label for="gender">Gender: </label>
                     Male <input type="radio" id="gender" name="gender" value="male" checked>
                     Female <input type="radio" id="gender" name="gender" value="female">
                     <br />
+                    </div>
 
+                    <div class="content">
                     <label for="civil-status">Civil Status: </label>
                     <select name="civil-status" id="civil-status">
                         <option value="single">Single</option>
@@ -64,11 +78,15 @@
                     <label for="father">Name of Father: </label>
                     <input type="text" id="father" name="father" placeholder="Father's Name">
                     <br />
+                    </div>
 
+                    <div class="content">
                     <label for="mother">Name of Mother: </label>
                     <input type="text" id="mother" name="mother" placeholder="Mother's Name">
                     <br />
+                    </div>
 
+                    <div class="content">
                     <label for="siblings">Number of Siblings: </label>
                     <input type="number" min="1" max="100" value="1">
                     </div> 
@@ -80,19 +98,27 @@
                     <label for="highschool">Highschool: </label>
                     <input type="text" id="highschool" name="highschool" placeholder="Highschool">
                     <br />
+                    </div>
 
+                    <div class="content">
                     <label for="year-grad">Year Graduated: </label>
                     <input type="number" name="number" id="number" min="1900" max="2024" value="1900">
                     <br />
+                    </div>
 
+                    <div class="content">
                     <label for="college">College: </label>
                     <input type="text" name="college" id="college" placeholder="College">
                     <br />
+                    </div>
 
+                    <div class="content">
                     <label for="course">Course: </label>
                     <input type="text" name="course" id="course" placeholder="Course">
                     <br />
+                    </div>
 
+                    <div class="content">
                     <label for="year-grad">Year Graduated: </label>
                     <input type="number" name="number" id="number" min="1900" max="2024" value="1900">
                     </div>
@@ -104,11 +130,15 @@
                     <label for="occupation">Occupation: </label>
                     <input type="text" id="occupation" name="occupation" placeholder="Occupation">
                     <br />
+                    </div>
 
+                    <div class="content">
                     <label for="company">Name of Company: </label>
                     <input type="text" id="company" name="company" placeholder="Company">
                     <br />
+                    </div>
 
+                    <div class="content">
                     <label for="year-worked">Year/s of Working: </label>
                     <select name="year-worked" id="year-worked">
                         <option value="0-1">0-1 year</option>
@@ -130,7 +160,9 @@
                     Programming <input type="checkbox" name="hobbies" id="hobbies" value="programming">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
                     Writing <input type="checkbox" name="hobbies" id="hobbies" value="writing"><br />
                     <br />
-                    
+                    </div>
+
+                    <div class="content">
                     <label for="others">Specify Other Hobbies: </label>
                     <input type="text" name="others" id="others" placeholder="Other Hobbies">
                     </div>
