update html file

--- a/registration-form.html
+++ b/registration-form.html
@@ -93,7 +93,7 @@
             </fieldset>
 
             <fieldset>
-                <legend>Educational Background</legend>
+                <legend>Education</legend>
                     <div class="content">
                     <label for="highschool">Highschool: </label>
                     <input type="text" id="highschool" name="highschool" placeholder="Highschool">
