--- a/registration-form.html
+++ b/registration-form.html
@@ -17,54 +17,54 @@
         <div class="header">
             <h3>Registration Form</h3>
         </div>
+        <form>
             <fieldset>
                 <legend>Personal Information</legend>
                     <div class="content">
                     <label for="fname">First Name: </label>
-                    <input type="text" id="fname" name="fname" placeholder="First Name">
-                    <br />
+                    <input type="text" id="fname" name="fname">
+                    <br /> 
                     </div>
 
                     <div class="content">
                     <label for="mname">Middle Name: </label>
-                    <input type="text" id="fname" name="mname" placeholder="Middle Name">
-                    <br />
+                    <input type="text" id="fname" name="mname">
+                    <br /> 
                     </div>
 
                     <div class="content">
                     <label for="lname">Last Name: </label>
-                    <input type="text" id="lname" name="lname" placeholder="Last Name">
-                    <br />
+                    <input type="text" id="lname" name="lname">
+                    <br /> 
                     </div>
 
                     <div class="content">
-                    <label for="bdate">Birthdate: </label>
                     <input type="date" id="bdate" name="bdate">
-                    <br />
+                    <br /> 
                     </div>
 
                     <div class="content">
                     <label for="age">Age: </label>
-                    <input type="number" id="age" min="1" max="100" value="1" name="age">
-                    <br />
+                    <input type="number" id="age" min="1" max="100" name="age">
+                    <br /> 
                     </div>    
 
                     <div class="content">
                     <label for="address">Address: </label>
-                    <input type="text" id="address" name="address" placeholder="Address">
-                    <br />
+                    <input type="text" id="address" name="address"> 
                     </div>
 
                     <div class="content">
-                    <label for="gender">Gender: </label>
+                    <label for="gender" class="normal">Gender: </label>
                     Male <input type="radio" id="gender" name="gender" value="male" checked>
                     Female <input type="radio" id="gender" name="gender" value="female">
-                    <br />
+                    <br /> 
                     </div>
 
                     <div class="content">
                     <label for="civil-status">Civil Status: </label>
                     <select name="civil-status" id="civil-status">
+                        <option></option>
                         <option value="single">Single</option>
                         <option value="married">Married</option>
                         <option value="widowed">Widowed</option>
@@ -76,19 +76,19 @@
                 <legend>Family Member</legend>
                     <div class="content">
                     <label for="father">Name of Father: </label>
-                    <input type="text" id="father" name="father" placeholder="Father's Name">
-                    <br />
+                    <input type="text" id="father" name="father">
+                    <br /> 
                     </div>
 
                     <div class="content">
                     <label for="mother">Name of Mother: </label>
-                    <input type="text" id="mother" name="mother" placeholder="Mother's Name">
-                    <br />
+                    <input type="text" id="mother" name="mother">
+                    <br /> 
                     </div>
 
                     <div class="content">
                     <label for="siblings">Number of Siblings: </label>
-                    <input type="number" min="1" max="100" value="1">
+                    <input type="number" min="1" max="100">
                     </div> 
             </fieldset>
 
@@ -96,51 +96,47 @@
                 <legend>Education</legend>
                     <div class="content">
                     <label for="highschool">Highschool: </label>
-                    <input type="text" id="highschool" name="highschool" placeholder="Highschool">
-                    <br />
+                    <input type="text" id="highschool" name="highschool"> 
                     </div>
 
                     <div class="content">
                     <label for="year-grad">Year Graduated: </label>
-                    <input type="number" name="number" id="number" min="1900" max="2024" value="1900">
-                    <br />
+                    <input type="number" name="number" id="number" min="1900" max="2024">
+                    <br /> 
                     </div>
 
                     <div class="content">
                     <label for="college">College: </label>
-                    <input type="text" name="college" id="college" placeholder="College">
-                    <br />
+                    <input type="text" name="college" id="college"> 
                     </div>
 
                     <div class="content">
                     <label for="course">Course: </label>
-                    <input type="text" name="course" id="course" placeholder="Course">
-                    <br />
+                    <input type="text" name="course" id="course"> 
                     </div>
 
                     <div class="content">
                     <label for="year-grad">Year Graduated: </label>
-                    <input type="number" name="number" id="number" min="1900" max="2024" value="1900">
+                    <input type="number" name="number" id="number" min="1900" max="2024">
                     </div>
             </fieldset>
 
-            <fieldset>
+            <fieldset class="last">
                 <legend>Employment Details</legend>
                     <div class="content">
                     <label for="occupation">Occupation: </label>
-                    <input type="text" id="occupation" name="occupation" placeholder="Occupation">
-                    <br />
+                    <input type="text" id="occupation" name="occupation"> 
                     </div>
 
                     <div class="content">
                     <label for="company">Name of Company: </label>
-                    <input type="text" id="company" name="company" placeholder="Company">
-                    <br />
+                    <input type="text" id="company" name="company"> 
                     </div>
 
                     <div class="content">
                     <label for="year-worked">Year/s of Working: </label>
                     <select name="year-worked" id="year-worked">
+                        <option></option>
                         <option value="0-1">0-1 year</option>
                         <option value="2-5">2-5 years</option>
                         <option value="6-10">6-10 years</option>
@@ -149,29 +145,11 @@
                     </div>
             </fieldset>
 
-            <fieldset class="last">
-                <legend>Hobbies</legend>
-                    <div class="content">
-                    <label for="hobbies">Choose a hobby/ies: </label><br /><br />
-                    Reading <input type="checkbox" name="hobbies" id="hobbies" value="reading">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-                    Writing <input type="checkbox" name="hobbies" id="hobbies" value="writing"><br />
-                    Biking <input type="checkbox" name="hobbies" id="hobbies" value="biking">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-                    Traveling <input type="checkbox" name="hobbies" id="hobbies" value="traveling"><br />
-                    Programming <input type="checkbox" name="hobbies" id="hobbies" value="programming">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-                    Writing <input type="checkbox" name="hobbies" id="hobbies" value="writing"><br />
-                    <br />
-                    </div>
-
-                    <div class="content">
-                    <label for="others">Specify Other Hobbies: </label>
-                    <input type="text" name="others" id="others" placeholder="Other Hobbies">
-                    </div>
-            </fieldset> 
-
                 <div class="buttons">
                     <input type="submit" name="submit" value="Submit Details">
                     <input type="reset" name="reset" value="Reset Registration">
                 </div>
+                </form>
     </div>
 </body>
 </html>
