--- a/registration-form.html
+++ b/registration-form.html
@@ -22,19 +22,19 @@
                 <legend>Personal Information</legend>
                     <div class="content">
                     <label for="fname">First Name: </label>
-                    <input type="text" id="fname" name="fname">
+                    <input type="text" id="fname" name="fname" autocomplete="off">
                     <br /> 
                     </div>
 
                     <div class="content">
                     <label for="mname">Middle Name: </label>
-                    <input type="text" id="fname" name="mname">
+                    <input type="text" id="fname" name="mname" autocomplete="off">
                     <br /> 
                     </div>
 
                     <div class="content">
                     <label for="lname">Last Name: </label>
-                    <input type="text" id="lname" name="lname">
+                    <input type="text" id="lname" name="lname" autocomplete="off">
                     <br /> 
                     </div>
 
@@ -51,11 +51,11 @@
 
                     <div class="content">
                     <label for="address">Address: </label>
-                    <input type="text" id="address" name="address"> 
+                    <input type="text" id="address" name="address" autocomplete="off"> 
                     </div>
 
                     <div class="content">
-                    <label for="gender" class="normal">Gender: </label>
+                    <label for="gender" class="normal">Gender:</label>
                     Male <input type="radio" id="gender" name="gender" value="male" checked>
                     Female <input type="radio" id="gender" name="gender" value="female">
                     <br /> 
@@ -76,13 +76,13 @@
                 <legend>Family Member</legend>
                     <div class="content">
                     <label for="father">Name of Father: </label>
-                    <input type="text" id="father" name="father">
+                    <input type="text" id="father" name="father" autocomplete="off">
                     <br /> 
                     </div>
 
                     <div class="content">
                     <label for="mother">Name of Mother: </label>
-                    <input type="text" id="mother" name="mother">
+                    <input type="text" id="mother" name="mother" autocomplete="off">
                     <br /> 
                     </div>
 
@@ -96,7 +96,7 @@
                 <legend>Education</legend>
                     <div class="content">
                     <label for="highschool">Highschool: </label>
-                    <input type="text" id="highschool" name="highschool"> 
+                    <input type="text" id="highschool" name="highschool" autocomplete="off"> 
                     </div>
 
                     <div class="content">
@@ -107,12 +107,12 @@
 
                     <div class="content">
                     <label for="college">College: </label>
-                    <input type="text" name="college" id="college"> 
+                    <input type="text" name="college" id="college" autocomplete="off"> 
                     </div>
 
                     <div class="content">
                     <label for="course">Course: </label>
-                    <input type="text" name="course" id="course"> 
+                    <input type="text" name="course" id="course" autocomplete="off"> 
                     </div>
 
                     <div class="content">
@@ -125,12 +125,12 @@
                 <legend>Employment Details</legend>
                     <div class="content">
                     <label for="occupation">Occupation: </label>
-                    <input type="text" id="occupation" name="occupation"> 
+                    <input type="text" id="occupation" name="occupation" autocomplete="off"> 
                     </div>
 
                     <div class="content">
                     <label for="company">Name of Company: </label>
-                    <input type="text" id="company" name="company"> 
+                    <input type="text" id="company" name="company" autocomplete="off"> 
                     </div>
 
                     <div class="content">
