--- a/registration-form.html
+++ b/registration-form.html
@@ -146,8 +146,8 @@
             </fieldset>
 
                 <div class="buttons">
-                    <input type="submit" name="submit" value="Submit Details">
-                    <input type="reset" name="reset" value="Reset Registration">
+                    <button class="submit"><a href="index.html">Submit</a></button>
+                    <input type="reset" name="reset" value="Reset Registration" class="reset">
                 </div>
                 </form>
     </div>
