--- a/registration-form.html
+++ b/registration-form.html
@@ -22,7 +22,7 @@
                 <legend>Personal Information</legend>
                     <div class="content">
                     <label for="fname">First Name: </label>
-                    <input type="text" id="fname" name="fname" autocomplete="off">
+                    <input type="text" id="fname" name="fname" autocomplete="off" required>
                     <br /> 
                     </div>
 
@@ -34,36 +34,36 @@
 
                     <div class="content">
                     <label for="lname">Last Name: </label>
-                    <input type="text" id="lname" name="lname" autocomplete="off">
+                    <input type="text" id="lname" name="lname" autocomplete="off" required>
                     <br /> 
                     </div>
 
                     <div class="content">
-                    <input type="date" id="bdate" name="bdate">
+                    <input type="date" id="bdate" name="bdate" required>
                     <br /> 
                     </div>
 
                     <div class="content">
                     <label for="age">Age: </label>
-                    <input type="number" id="age" min="1" max="100" name="age">
+                    <input type="number" id="age" min="1" max="100" name="age" required>
                     <br /> 
                     </div>    
 
                     <div class="content">
                     <label for="address">Address: </label>
-                    <input type="text" id="address" name="address" autocomplete="off"> 
+                    <input type="text" id="address" name="address" autocomplete="off" required> 
                     </div>
 
                     <div class="content">
                     <label for="gender" class="normal">Gender:</label>
-                    Male <input type="radio" id="gender" name="gender" value="male" checked>
-                    Female <input type="radio" id="gender" name="gender" value="female">
+                    <span class="gender">Male</span> <input type="radio" id="gender" name="gender" value="male" checked>
+                    <span class="gender">Female</span> <input type="radio" id="gender" name="gender" value="female">
                     <br /> 
                     </div>
 
                     <div class="content">
                     <label for="civil-status">Civil Status: </label>
-                    <select name="civil-status" id="civil-status">
+                    <select name="civil-status" id="civil-status" required>
                         <option></option>
                         <option value="single">Single</option>
                         <option value="married">Married</option>
@@ -76,19 +76,19 @@
                 <legend>Family Member</legend>
                     <div class="content">
                     <label for="father">Name of Father: </label>
-                    <input type="text" id="father" name="father" autocomplete="off">
+                    <input type="text" id="father" name="father" autocomplete="off" required>
                     <br /> 
                     </div>
 
                     <div class="content">
                     <label for="mother">Name of Mother: </label>
-                    <input type="text" id="mother" name="mother" autocomplete="off">
+                    <input type="text" id="mother" name="mother" autocomplete="off" required>
                     <br /> 
                     </div>
 
                     <div class="content">
                     <label for="siblings">Number of Siblings: </label>
-                    <input type="number" min="1" max="100">
+                    <input type="number" min="0" max="100" required>
                     </div> 
             </fieldset>
 
@@ -96,12 +96,12 @@
                 <legend>Education</legend>
                     <div class="content">
                     <label for="highschool">Highschool: </label>
-                    <input type="text" id="highschool" name="highschool" autocomplete="off"> 
+                    <input type="text" id="highschool" name="highschool" autocomplete="off" required> 
                     </div>
 
                     <div class="content">
                     <label for="year-grad">Year Graduated: </label>
-                    <input type="number" name="number" id="number" min="1900" max="2024">
+                    <input type="number" name="number" id="number" min="1900" max="2024" required>
                     <br /> 
                     </div>
 
@@ -125,17 +125,17 @@
                 <legend>Employment Details</legend>
                     <div class="content">
                     <label for="occupation">Occupation: </label>
-                    <input type="text" id="occupation" name="occupation" autocomplete="off"> 
+                    <input type="text" id="occupation" name="occupation" autocomplete="off" required> 
                     </div>
 
                     <div class="content">
                     <label for="company">Name of Company: </label>
-                    <input type="text" id="company" name="company" autocomplete="off"> 
+                    <input type="text" id="company" name="company" autocomplete="off" required> 
                     </div>
 
                     <div class="content">
                     <label for="year-worked">Year/s of Working: </label>
-                    <select name="year-worked" id="year-worked">
+                    <select name="year-worked" id="year-worked" required>
                         <option></option>
                         <option value="0-1">0-1 year</option>
                         <option value="2-5">2-5 years</option>
