--- a/registration-form.html
+++ b/registration-form.html
@@ -146,10 +146,16 @@
             </fieldset>
 
                 <div class="buttons">
-                    <button class="submit"><a href="index.html">Submit</a></button>
+                    <button class="submit" onclick="alert()"><a href="index.html">Submit</a></button>
                     <input type="reset" name="reset" value="Reset Registration" class="reset">
                 </div>
                 </form>
     </div>
+
+    <script>
+        function alert() {
+            
+        }
+    </script>
 </body>
 </html>
