--- a/registration-form.html
+++ b/registration-form.html
@@ -146,16 +146,10 @@
             </fieldset>
 
                 <div class="buttons">
-                    <button class="submit" onclick="alert()"><a href="index.html">Submit</a></button>
+                    <button class="submit" onclick="alert('The registration form has been successfully submitted!')" id="submit">Submit</button>
                     <input type="reset" name="reset" value="Reset Registration" class="reset">
                 </div>
                 </form>
     </div>
-
-    <script>
-        function alert() {
-            
-        }
-    </script>
 </body>
 </html>
