--- a/registration-form.html
+++ b/registration-form.html
@@ -29,6 +29,7 @@
                     <div class="content">
                     <label for="mname">Middle Name: </label>
                     <input type="text" id="fname" name="mname" autocomplete="off">
+                    <span class="tooltip">Middle name is optional</span>
                     <br /> 
                     </div>
 
@@ -108,16 +109,19 @@
                     <div class="content">
                     <label for="college">College: </label>
                     <input type="text" name="college" id="college" autocomplete="off"> 
+                    <span class="tooltip">College name is optional</span>
                     </div>
 
                     <div class="content">
                     <label for="course">Course: </label>
                     <input type="text" name="course" id="course" autocomplete="off"> 
+                    <span class="tooltip">Course is optional. Fill this out if you attend college</span>
                     </div>
 
                     <div class="content">
                     <label for="year-grad">Year Graduated: </label>
                     <input type="number" name="number" id="number" min="1900" max="2024">
+                    <span class="tooltip">Year graduated is optional. Fill this out if you attend college</span>
                     </div>
             </fieldset>
 
