--- a/registration-form.html
+++ b/registration-form.html
@@ -40,6 +40,7 @@
                     </div>
 
                     <div class="content">
+                    <label for="bdate">Birth date: </label>
                     <input type="date" id="bdate" name="bdate" required>
                     <br /> 
                     </div>
